# deepred

./: LICENSE  README.md  faster_red_post_parcel_pokeballs.state  installs.sh  setup.cfg  trainer_battle.state  wild_battle.state
deepred/: arena_trainer.py  trainer.py
deepred/models/: boeybaseline.py  boeysbaseline.py  cartpole.py  double_policy.py  impala_deep.py  impala_shallow.py  modules.py  resnet.py  simple.py  small_boeys.py  tf_utils.py
deepred/polaris_env/: action_space.py  additional_memory.py  agent_helper.py  battle_parser.py  enums.py  game_patching.py  gamestate.py  gb_console.py  map_dimensions.py  map_warps.py  metrics.py  move_infos.py  observation_space.py  polaris_red.py  rewards.py  streaming.py  tmp.py  utils.py
deepred/polaris_env/decomp_utils/: event_consts.asm  event_enum.py  get_event_adresses.py
deepred/polaris_env/env_checkpointing/: env_checkpoint.py  env_checkpoint_manager.py  env_checkpointer.py
deepred/polaris_env/pokemon_red/: bag_item_info.py  enums.py  map_dimensions.py  map_warps.py  mart_info.py  marts.py  move_info.py  move_infos.py  pokemon_stats.py
deepred/polaris_env/red_arena/: README.md  battle_sampler.py  observation_space.py  pokemon_data.py  polaris_red_arena.py  rewards.py
deepred/polaris_utils/: callbacks.py  counting.py
scripts/: train_boeys_baseline.py  train_shallow_ppo.py  train_shallow_ppo_deprec.py
tests/: cartpole_test.py  env_test.py  hashing.py  memleak.py  model_test.py  pendulum_test.py  red_arena_human.py  tf_loop.py  train_double_policy.py  train_simple.py  train_smallboeys.py
(+21 files in other folders)
