[metadata]
name = deepred
version = 0.0.1
author = Victor Villin/Theo Torres
author_email = victor.villin@unine.ch
description = None
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages =
    deepred
include_package_data = True
python_requires = >=3.9
install_requires =
    mediapy
    pyboy
    opencv-python
    plotly
